<?xml version="1.0"?>
<package format="3">
  <name>mcl3d_ros</name>
  <version>0.0.0</version>
  <description>The mcl3d_ros package</description>
  <maintainer email="akai@todo.todo">akai</maintainer>
  <license>TODO</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pcl</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>



  <!-- Ament package (optional) -->
  <!-- <ament_cmake></ament_cmake> -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
